# kml-polygonize-wasm

./: Cargo.toml  README.md
src/: lib.rs
www/: README.md  index.html  package-lock.json  package.json  vite.config.js
www/src/: App.svelte  fileUpload.js
