[package]
name = "kml-polygonize-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
kml = { version = "0.8.7", default-features = false }
serde ={ version = "1.0.217", features = ["derive"]}
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11.15"
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
version = "0.3.77"
features =[ "console" ]
